--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,41 @@
 body{
     font-family: 'Open Sans', sans-serif;
 }
+
+    /* HEADER */
+
+.menu{
+    max-width: 1260px;
+    margin: auto;
+}
+
+.row-menu{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 10px auto;
+}
+
+.col-menu{
+    display: flex;
+    justify-content: center;
+}
+
+.container1 img{
+    height: 90%;
+    vertical-align: middle;
+}
+
+.container1 span{
+    margin-left: 15px;
+}
+
+.container1 button{
+    padding: 4px 7px;
+    background-color: rgb(0, 81, 255);
+    color: white;
+    border: none;
+    margin-left: 8px;
+}
+
+    /* FINE HEADER */
