--- a/css/style.css
+++ b/css/style.css
@@ -9,39 +9,94 @@ body{
 }
 
     /* HEADER */
-
 .menu{
-    max-width: 1260px;
-    margin: auto;
+    width: 1170px;
+    margin: 10px;
 }
 
 .row-menu{
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin: 10px auto;
 }
 
-.col-menu{
-    display: flex;
-    justify-content: center;
-}
-
-.container1 img{
-    height: 90%;
+.container-menu img{
+    height: 100%;
     vertical-align: middle;
 }
 
-.container1 span{
+.container-menu span{
     margin-left: 15px;
+    font-size: 10px;
 }
 
-.container1 button{
+.container-menu button{
     padding: 4px 7px;
     background-color: rgb(0, 81, 255);
     color: white;
     border: none;
+    font-size: 10px;
     margin-left: 8px;
 }
-
     /* FINE HEADER */
+
+    /* INIZIO MAIN */
+
+    /* INIZIO SEZIONE 1 */
+.section1{
+    background-color: rgb(141, 200, 240)
+}
+
+.section1-full-container{
+    max-width: 1070px;
+    margin: auto;
+}
+
+.row-section1{
+    display: flex;
+    flex-wrap: wrap;
+    width: 70%;
+    margin: 20px auto;
+}
+
+.col-section1{
+    width: 100%;
+}
+
+.section1-container{
+    position: relative;
+}
+
+.col-section1 h2{
+    font-size: 45px;
+    margin: 40px 0;
+}
+
+.section1-container p{
+    width: 30%;
+    font-size: 10px;
+}
+
+.section1-container button{
+    margin: 30px 0;
+    padding: 7px 12px;
+    border: none;
+    background-color: rgb(0, 81, 255);
+    color: white;
+}
+
+.section1-container i{
+    margin-top: 70px;
+    margin-bottom: 20px;
+    font-size: 40px;
+}
+
+.section1-container img{
+    height: 370px;
+    position: absolute;
+    left: 230px;
+    bottom: -50px;
+}
+    /* FINE SEZIONE 1 */
+
+    /* FINE MAIN */
