--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 
     /* HEADER */
 .menu{
-    width: 1170px;
+    max-width: 1170px;
     margin: 10px;
 }
 
@@ -99,4 +99,74 @@ body{
 }
     /* FINE SEZIONE 1 */
 
+    /* INIZIO SEZIONE 2 */
+.section2{
+    max-width: 700px;
+    margin: 100px auto;
+}
+
+.section2 h3{
+    font-size: 32px;
+    margin-bottom: 50px;
+}
+
+.inpunt{
+    margin-bottom: 30px;
+}
+
+.row-section2{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.col-section2{
+    width: calc(100% / 3 - 20px);
+    margin: 10px auto;
+}
+
+.col-section2 h4{
+    border: 0.2px solid grey;
+    padding: 2px 60px;
+}
+
+.section2-container ul{
+    height: 100vh;
+    font-size: 13px;
+    list-style-type: none;
+    padding: 30px 10px 750px 20px;
+    border: 0.2px solid grey;
+}
+
+.section2-container li{
+    margin-bottom: 17px;
+}
+
+li h5{
+    font-size: 16px;
+}
+
+li h6{
+    font-size: 13px;
+}
+
+.section2-container button{
+    margin-top: 30px;
+    margin-bottom: 20px;
+    padding: 7px 12px;
+    border: none;
+    background-color: rgb(0, 81, 255);
+    color: white;
+}
+
+ul hr{
+    margin: 30px 150px 30px 0;
+    border: 0.2px solid grey;
+}
+
+.chiaro{
+    color: grey;
+    margin-bottom: 20px;
+}
+    /* FINE SEZIONE 2 */
     /* FINE MAIN */
