--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ body{
 
     /* HEADER */
 .menu{
-    max-width: 1170px;
     margin: 10px;
 }
 
@@ -48,14 +47,14 @@ body{
 }
 
 .section1-full-container{
-    max-width: 1070px;
+    max-width: 1060px;
     margin: auto;
 }
 
 .row-section1{
     display: flex;
     flex-wrap: wrap;
-    width: 70%;
+    width: 72%;
     margin: 20px auto;
 }
 
@@ -68,17 +67,18 @@ body{
 }
 
 .col-section1 h2{
-    font-size: 45px;
-    margin: 40px 0;
+    font-size: 60px;
+    margin: 50px 0;
 }
 
 .section1-container p{
-    width: 30%;
+    width: 32%;
     font-size: 10px;
 }
 
 .section1-container button{
-    margin: 30px 0;
+    font-size: 10px;
+    margin: 20px 0;
     padding: 7px 12px;
     border: none;
     background-color: rgb(0, 81, 255);
@@ -92,17 +92,18 @@ body{
 }
 
 .section1-container img{
-    height: 370px;
+    height: 323px;
     position: absolute;
-    left: 230px;
+    left: 240px;
     bottom: -50px;
 }
     /* FINE SEZIONE 1 */
 
     /* INIZIO SEZIONE 2 */
 .section2{
-    max-width: 700px;
+    max-width: 650px;
     margin: 100px auto;
+    margin-bottom: 30px;
 }
 
 .section2 h3{
@@ -134,7 +135,7 @@ body{
     height: 100vh;
     font-size: 13px;
     list-style-type: none;
-    padding: 30px 10px 750px 20px;
+    padding: 30px 10px 800px 20px;
     border: 0.2px solid grey;
 }
 
@@ -169,4 +170,54 @@ ul hr{
     margin-bottom: 20px;
 }
     /* FINE SEZIONE 2 */
+
+    /* INIZO SEZIONE 3 */
+.section3{
+    max-width: 650px;
+    margin: 0 auto;
+    margin-bottom: 100px;
+}
+
+.row-section3{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    border: 0.2px solid grey;
+}
+
+.col-section3{
+    width: 70%;
+}
+
+.col1-section3{
+    width: 30%;
+}
+
+.section3 h4{
+    padding: 10px;
+    font-size: 10px;
+    text-align: center;
+    border: 0.2px solid grey;
+}
+
+.section3-container{
+    padding: 20px;
+}
+
+.section3-container p, .section3-container h4, .section3-container button{
+    font-size: 10px;
+}
+
+.section3-container > p{
+    margin-top: 20px;
+}
+
+.section3-container button{
+    padding: 7px 12px;
+    border: none;
+    background-color: rgb(0, 81, 255);
+    color: white;
+}
+
+    /* FINE SEZIONE 3 */
     /* FINE MAIN */
