--- a/css/style.css
+++ b/css/style.css
@@ -301,4 +301,17 @@ ul hr{
 }
 
     /* FINE SEZIONE 5 */
+.section6{
+    max-width: 630px;
+    margin: 0 auto;
+    margin-bottom: 100px;
+}
+
+.section6 h2{
+    font-size: 40px;
+    margin-bottom: 60px;
+}
+    /* INIZIO SEZIONE 6 */
+
+    /* FINE SEZIONE 6 */
     /* FINE MAIN */
