--- a/css/style.css
+++ b/css/style.css
@@ -14,18 +14,66 @@ header{
     z-index: 100;
     background-color: white;
     width: 100%;
-    margin-top: 0;
 }
 .menu{
     max-width: 1270px;
     margin: 10px auto;
 }
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    margin: 15px 0 0 15px;
+    z-index: 100;
+}
+
+.dropdown-content a, .dropdown-content1 a{
+    font-size: 10px;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    color: black;
+}
+
+.dropdown-content a:hover, .dropdown-content1 a:hover{
+    background-color: rosybrown;
+    font-size: 15px;
+}
+
+.dropdown:hover .dropdown-content, .dropdown:hover .dropdown-content1{
+    display: block; 
+}
+
+.dropdown:hover .grey1 {
+    background-color: rgb(228, 226, 226);
+    border: 1px solid black;
+    padding: 15px 0;
+}
+
+.dropdown-content1{
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    margin: 15px -10px 0 0;
+    z-index: 100;
+}
+
 .row-menu{
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    
+    width: 100%;  
 }
 
 .container-menu img{
@@ -53,7 +101,7 @@ header{
     /* INIZIO MAIN */
 
     /* INIZIO SEZIONE 1 */
-.section1{
+#section1{
     background-color: rgb(141, 200, 240)
 }
 
@@ -111,11 +159,25 @@ header{
     /* FINE SEZIONE 1 */
 
     /* INIZIO SEZIONE 2 */
-.section2{
+#section2{
     max-width: 650px;
     margin: 100px auto;
     margin-bottom: 30px;
 }
+
+input{
+    appearance: none;
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    border: 2px solid #999;
+    transition: 0.2s all linear;
+    margin-right: 5px;
+}
+
+input:checked {
+    border: 4px solid blue;
+  }
 
 .section2 h3{
     font-size: 32px;
@@ -140,6 +202,7 @@ header{
 .col-section2 h4{
     border: 0.2px solid grey;
     padding: 2px 60px;
+    margin-top: 20px;
 }
 
 .section2-container ul{
@@ -184,7 +247,7 @@ ul hr{
     /* FINE SEZIONE 2 */
 
     /* INIZO SEZIONE 3 */
-.section3{
+#section3{
     max-width: 630px;
     margin: 0 auto;
     margin-bottom: 100px;
@@ -235,7 +298,7 @@ ul hr{
     /* FINE SEZIONE 3 */
 
     /* INIZIO SEZIONE 4 */
-.section4{
+#section4{
     max-width: 670px;
     margin: 0 auto;
     margin-bottom: 100px;
@@ -280,7 +343,7 @@ ul hr{
 }
     /* FINE SEZIONE 4 */
     /* INIZIO SEZIONE 5 */
-.section5{
+#section5{
     max-width: 630px;
     margin: 0 auto;
     margin-bottom: 100px;
@@ -314,7 +377,7 @@ ul hr{
     /* FINE SEZIONE 5 */
 
     /* INIZIO SEZIONE 6 */
-.section6{
+#section6{
     max-width: 630px;
     margin: 0 auto;
     margin-bottom: 100px;
@@ -331,7 +394,7 @@ ul hr{
     /* FINE SEZIONE 6 */
 
     /* INIZIO SEZIONE 7 */
-.section7{ 
+#section7{ 
     max-width: 1270px;
     margin: 0 auto;
 }
@@ -424,7 +487,7 @@ ul hr{
     /* FINE SEZIONE 7 */
 
     /* INIZIO SEZIONE 8 */
-.section8{
+#section8{
     background-color: rgb(141, 200, 240);
 }
 
@@ -453,7 +516,7 @@ ul hr{
     /* FINE SEZIONE 8 */
 
     /* INIZIO SEZIONE 9 */
-.section9{
+#section9{
     max-width: 630px;
     margin: 0 auto;
 }
@@ -499,7 +562,7 @@ details > summary {
     margin-bottom: 15px;
     cursor: pointer;
     list-style: none;
-  }
+}
     /* FINE SEZIONE 9 */
     /* FINE MAIN */
 
@@ -509,7 +572,7 @@ footer{
     background-color: black;
 }
 
-.footer{
+#footer{
     max-width: 700px;
     margin: 0 auto; 
     color: white;
