--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ header{
     width: 100%;
 }
 .menu{
-    max-width: 1270px;
+    max-width: 100vw;
     margin: 10px auto;
 }
 
@@ -51,15 +51,18 @@ header{
 .dropdown-content a:hover, .dropdown-content1 a:hover{
     background-color: rosybrown;
     font-size: 15px;
+    border-radius: 10px;
 }
 
 .dropdown:hover .dropdown-content, .dropdown:hover .dropdown-content1{
-    display: block; 
+    display: block;
+    border-radius: 10px;
 }
 
 .dropdown:hover .grey1 {
     background-color: rgb(228, 226, 226);
     border: 1px solid black;
+    border-radius: 10px;
     padding: 15px 0;
 }
 
@@ -177,15 +180,17 @@ input{
     border: 2px solid #999;
     transition: 0.2s all linear;
     margin-right: 5px;
+    margin-left: 10px;
 }
 
 input:checked {
     border: 4px solid blue;
   }
 
-.section2 h3{
+#section2 h3{
     font-size: 32px;
     margin-bottom: 50px;
+    margin-left: 10px;
 }
 
 .inpunt{
@@ -195,7 +200,7 @@ input:checked {
 .row-section2{
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .col-section2{
@@ -207,6 +212,7 @@ input:checked {
     border: 0.2px solid grey;
     padding: 2px 60px;
     margin-top: 20px;
+    font-size: 15px;
 }
 
 .section2-container ul{
@@ -272,7 +278,7 @@ ul hr{
     width: 30%;
 }
 
-.section3 h4{
+#section3 h4{
     padding: 10px;
     font-size: 10px;
     text-align: center;
@@ -399,7 +405,7 @@ ul hr{
 
     /* INIZIO SEZIONE 7 */
 #section7{ 
-    max-width: 1270px;
+    max-width: 100vw;
     margin: 0 auto;
 }
 
@@ -422,7 +428,7 @@ ul hr{
 
 .col1-section7{
     width: calc(100% / 2);
-    height: 200px;
+    height: 250px;
     position: relative;
 }
 
@@ -611,18 +617,18 @@ footer{
     font-size: 9px;
 }
 
-.footer hr{
+#footer hr{
     margin-right: 600px;
     border: 0.6px solid gray;
     margin-bottom: 40px;
 }
 
-.footer summary{
+#footer summary{
     font-size: 10px;
     color: gray;
 }
 
-.footer details{
+#footer details{
     padding-bottom: 20px;
 }
 
